--- a/public/css/base.css
+++ b/public/css/base.css
@@ -58,3 +58,25 @@ table img {
   aspect-ratio: 1/1;
   object-fit: contain;
 }
+
+.account-item {
+  background-color: #f1f2f6;
+  padding: 70px;
+}
+
+.account-item a {
+  text-transform: uppercase;
+  font-size: 13px;
+  color: #4b6584;
+  font-weight: bold;
+}
+.account-item a:hover {
+  color: #778ca3;
+  text-decoration: none;
+}
+
+.order-summary {
+  background-color: #f4f8ff;
+  padding: 20px;
+  margin-top: 22px;
+}
