--- a/templates/account/index.html.twig
+++ b/templates/account/index.html.twig
@@ -1,16 +1,18 @@
 {% extends 'base.html.twig' %}
 
+
+
 {% block title %}Mon Compte{% endblock %}
 
 {% block body %}
 {% if is_granted('ROLE_ADMIN') %}
-<small><a href="{{path('admin')}}">Vous êtes un administrateur, accéder au backoffice ?</a></small><br />
+<small><a href="{{path('admin')}}">Vous êtes un administrateur, accéder à l'espace administrateur </a></small><br />
 {% endif %}
-Bienvenue {{ app.user.lastname }} dans votre compte.<br />
-C'est dans cet espace que vous allez pouvoir gérer toutes vos informations personnelles.
 
-<a href="{#{{ path('account_address_add') }}#}" class="btn btn-info btn-sm float-right">Ajouter une adresse</a>
-
+<div class="text-center">
+    <h1>Bienvenue {{ app.user.lastname }} dans votre compte.<br />C'est dans cet espace que vous allez pouvoir gérer
+        toutes vos informations personnelles.</h1>
+</div>
 <hr>
 
 <hr>
@@ -20,7 +22,6 @@ C'est dans cet espace que vous allez pouvoir gérer toutes vos informations pers
         <h1>Mot de passe</h1>
         <br />
         <div class="account-item text-center">
-            <img src="{{ asset('assets/img/password.png') }}" alt="Modifier mon mot de passe"><br />
             <a href="{#{{ path('account_password') }}#}">Modifier mon mot de passe</a>
         </div>
     </div>
@@ -36,7 +37,7 @@ C'est dans cet espace que vous allez pouvoir gérer toutes vos informations pers
         </p>
         {% else %}
         <div class="row text-center">
-            {% for address in app.user.addresses %}
+            {% for address in app.user.addresses|slice(0,8) %}
             <div>
                 {{address.address ~ ' ' ~ address.additional ~ ' ' ~ address.zip ~ ' ' ~ address.country}}
 
@@ -48,6 +49,7 @@ C'est dans cet espace que vous allez pouvoir gérer toutes vos informations pers
 
             <a href="{#{{ path('account_address') }}#}">Gérer mes adresses</a>
         </div>
+        <a href="{#{{ path('account_address_add') }}#}" class="btn btn-info btn-sm float-right">Ajouter une adresse</a>
     </div>
 
 
@@ -61,9 +63,9 @@ C'est dans cet espace que vous allez pouvoir gérer toutes vos informations pers
         </p>
         {% else %}
         <div class="row text-center">
-            {% for order in app.user.orders %}
+            {% for order in app.user.orders|slice(0,8) %}
             <div>
-                {{order.reference ~ ' ' ~ order.amount }}
+                {{order.reference ~ ' ' ~ order.billingAddress ~ ' ' ~ order.amount|number_format(2, ',', ' ') }} €
 
             </div>
             {% endfor %}
