--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -1,69 +1,73 @@
 <!DOCTYPE html>
 <html lang="fr">
 
-	<head>
+<head>
 
-		<meta charset="UTF-8">
-		<meta name="author" content="Willy TALOM">
-		<meta http-equiv="X-UA-Compatible" content="ie=edge">
-		<meta http-equiv="X-UA-Compatible" content="IE=7">
-		<meta name="keywords" content="Ventes de vetements Hommes Femmes Enfants">
-		<meta name="viewport" content="width=device-width, initial-scale=1.0">
-		<meta name="description" content="{% block description %}{% endblock %}">
+	<meta charset="UTF-8">
+	<meta name="author" content="Willy TALOM">
+	<meta http-equiv="X-UA-Compatible" content="ie=edge">
+	<meta http-equiv="X-UA-Compatible" content="IE=7">
+	<meta name="keywords" content="Ventes de vetements Hommes Femmes Enfants">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<meta name="description" content="{% block description %}{% endblock %}">
 
-		<title>VDM
-			{% block title %}{% endblock %}
-		</title>
-		<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
-		<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.9.1/font/bootstrap-icons.css">
-		<link rel="preconnect" href="https://fonts.googleapis.com">
-		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-		<link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,500;1,500&display=swap" rel="stylesheet">
-		<link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,500;1,500&display=swap" rel="stylesheet">
-
-
-		<link rel="stylesheet" href="{{ asset('css/base.css') }}"> {% block stylesheets %}{% endblock %}
+	<title>VDM
+		{% block title %}{% endblock %}
+	</title>
+	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet"
+		integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
+	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.9.1/font/bootstrap-icons.css">
+	<link rel="preconnect" href="https://fonts.googleapis.com">
+	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+	<link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,500;1,500&display=swap" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,500;1,500&display=swap" rel="stylesheet">
 
 
-		</head>
-
-		<body>
-
-			<header>
-
-				{% include "__partials/header.html.twig" %}
-
-			</header>
-			<main>
-
-				{% for label, messages in app.flashes %}
-					{% for message in messages %}
-						<div class="flash-{{ label }} bg-{{ label }} text-light p-3 rounded mb-5">
-							{{ message }}
-						</div>
-					{% endfor %}
-				{% endfor %}
-
-				{% block h1 %}{% endblock %}
+	<link rel="stylesheet" href="{{ asset('css/base.css') }}">
+	{% block stylesheets %}{% endblock %}
 
 
-				{% block body %}{% endblock %}
+</head>
+
+<body>
+
+	<header>
+
+		{% include "__partials/header.html.twig" %}
+
+	</header>
+	<main>
+
+		{% for label, messages in app.flashes %}
+		{% for message in messages %}
+		<div class="flash-{{ label }} bg-{{ label }} text-light p-3 rounded mb-5">
+			{{ message }}
+		</div>
+		{% endfor %}
+		{% endfor %}
+
+		{% block h1 %}{% endblock %}
 
 
-			</main>
+		{% block body %}{% endblock %}
 
-			<footer>
 
-				{% include "__partials/footer.html.twig"%}
+	</main>
 
-			</footer>
+	<footer>
 
-			<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa" crossorigin="anonymous"></script>
+		{% include "__partials/footer.html.twig"%}
 
-			<script src="{{ asset('js/base.js') }}"></script>
+	</footer>
 
-			{% block javascripts %}{% endblock %}
+	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"
+		integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa"
+		crossorigin="anonymous"></script>
 
-		</body>
+	<script src="{{ asset('js/base.js') }}"></script>
 
-	</html>
+	{% block javascripts %}{% endblock %}
+
+</body>
+
+</html>
