--- a/templates/product/productShow.html.twig
+++ b/templates/product/productShow.html.twig
@@ -7,8 +7,6 @@
 		<div class="row gx-4 gx-lg-5 align-items-center">
 			<div class="col-md-6"><img class="card-img-top mb-5 mb-md-0"
 					src="{{ asset('img/product/' ~ product.image1) }}" alt="..." /></div>
-
-
 			<div class="col-md-6">
 				<div class="small mb-1">{{product.reference}}</div>
 				<h1 class="display-5 fw-bolder">
@@ -16,14 +14,15 @@
 				<div class="fs-5 mb-5">
 					{% if product.reduction == 0 %}
 
-					<span class="">{{product.price }}
+					<span class="">{{product.price|number_format(2, ',', ' ') }}
 						€</span>
 
 					{% else %}
 
-					<span class="text-decoration-line-through text-danger">{{product.price}}
+					<span class="text-decoration-line-through text-danger">{{product.price|number_format(2, ',', '
+						')}}
 						€</span>
-					<span>{{product.PriceSolde }}
+					<span>{{product.PriceSolde|number_format(2, ',', ' ') }}
 						€</span>
 
 					{% endif %}
@@ -39,12 +38,10 @@
 							class="card-link btn btn-{{ product.quantity != 0 ? 'success' : 'danger disabled' }}">
 							<i class="bi bi-cart-plus-fill"></i> Acheter
 						</a>
-
 					</button>
 				</div>
 			</div>
 		</div>
-	</div>
 </section>
 
 <section class="py-5 bg-light">
@@ -60,6 +57,12 @@
 		<div class="col-md-6 col-lg-4 col-xl-3 p-3">
 
 			<div class="card h-100">
+				{% if product.createdAt|date('Y-m-d') >= 'now'|date_modify('-20
+				days')|date('Y-m-d') %}
+				<div class="badge bg-dark text-white position-absolute" style="top: 0.5rem; right: 0.5rem">
+					Nouveauté</div> {% endif
+				%}
+
 				<img class="card-img-top" src="{{ asset('img/product/' ~ product.image1) }}" alt="..." />
 
 
