--- a/templates/product/sexe.html.twig
+++ b/templates/product/sexe.html.twig
@@ -2,64 +2,69 @@
 
 {% block body %}
 
-	<div class="col-12">
-		<div class="row">
-			{% for product in products %}
+<div class="col-12">
+	<div class="row">
+		{% for product in products %}
 
-				<div class="col-md-6 col-lg-4 col-xl-3 p-3">
-
-
-					<div class="card h-100">
-
-						<div class="badge bg-dark text-white position-absolute" style="top: 0.5rem; right: 0.5rem">Nouveauté</div>
-						<img class="card-img-top" src="{{ asset('img/product/' ~ product.image1) }}" alt="produit de {{ product.name }}"/>
-
-						<div class="card-body p-4">
-							<div class="text-center">
-								<h5 class="fw-bolder">{{ product.name }}</h5>
-								<h6 id="text-des">{{ product.description|u.truncate(70,'...', false) }}</h6>
-								{% if product.reduction == 0 %}
-
-									<span class="">{{product.price}}
-										€
+		<div class="col-md-6 col-lg-4 col-xl-3 p-3">
 
 
-									</span>
+			<div class="card h-100">
+
+				<div class="badge bg-dark text-white position-absolute" style="top: 0.5rem; right: 0.5rem">Nouveauté
+				</div>
+				<img class="card-img-top" src="{{ asset('img/product/' ~ product.image1) }}"
+					alt="produit de {{ product.name }}" />
+
+				<div class="card-body p-4">
+					<div class="text-center">
+						<h5 class="fw-bolder">{{ product.name }}</h5>
+						<h6 id="text-des">{{ product.description|u.truncate(70,'...', false) }}</h6>
+						{% if product.reduction == 0 %}
+
+						<span class="">{{product.price|number_format(2, ',', ' ')}}
+							€
 
 
-								{% else %}
-									<span class="text-decoration-line-through text-danger">{{product.price}}
-
-										€
+						</span>
 
 
-									</span>
+						{% else %}
+						<span class="text-decoration-line-through text-danger">{{product.price|number_format(2, ',', '
+							')}}
+
+							€
 
 
-									<span>
-										{{product.PriceSolde}}
-										€
-									</span>
-
-								{% endif %}
+						</span>
 
 
-							</div>
-						</div>
-						<div class="card-footer p-4 pt-0 border-top-0 bg-transparent">
-							<div class="text-center">
-								<a href="{{ path('product_show', {'slug': product.slug}) }}" class="card-link btn btn-outline-primary">Acheter</a>
-								<a href="{{path('cart_add', {'id':product.id})}}" class="card-link btn btn-{{ product.quantity != 0 ? 'success' : 'danger disabled' }}">
-									<i class="bi bi-cart-plus-fill"></i>
-								</a>
+						<span>
+							{{product.PriceSolde|number_format(2, ',', ' ')}}
+							€
+						</span>
 
-							</div>
-						</div>
+						{% endif %}
+
+
 					</div>
 				</div>
-			{% endfor %}
+				<div class="card-footer p-4 pt-0 border-top-0 bg-transparent">
+					<div class="text-center">
+						<a href="{{ path('product_show', {'slug': product.slug}) }}"
+							class="card-link btn btn-outline-primary">Acheter</a>
+						<a href="{{path('cart_add', {'id':product.id})}}"
+							class="card-link btn btn-{{ product.quantity != 0 ? 'success' : 'danger disabled' }}">
+							<i class="bi bi-cart-plus-fill"></i>
+						</a>
+
+					</div>
+				</div>
+			</div>
 		</div>
+		{% endfor %}
 	</div>
+</div>
 
 
 {% endblock %}
