--- a/templates/account/index.html.twig
+++ b/templates/account/index.html.twig
@@ -33,7 +33,7 @@
         {% if app.user.addresses|length == 0 %}
         <p class="text-center">
             Vous n'avez pas encore ajouté d'adresse dans votre compte client. Pour en ajouter une, veuillez <a
-                href="{#{{ path('account_address_add') }}#}">cliquer ici</a>.
+                href="{{ path('account_address_add') }}">cliquer ici</a>.
         </p>
         {% else %}
         <div class="row text-center">
@@ -47,9 +47,9 @@
         {% endif %}
         <div class="account-item text-center">
 
-            <a href="{#{{ path('account_address') }}#}">Gérer mes adresses</a>
+            <a href="{{ path('user_account_address') }}">Gérer mes adresses</a>
         </div>
-        <a href="{#{{ path('account_address_add') }}#}" class="btn btn-info btn-sm float-right">Ajouter une adresse</a>
+
     </div>
 
 
@@ -59,20 +59,20 @@
         {% if app.user.orders|length == 0 %}
         <p class="text-center">
             Vous n'avez pas encore ajouté d'adresse dans votre compte client. Pour en ajouter une, veuillez <a
-                href="{#{{ path('account_address_add') }}#}">cliquer ici</a>.
+                href="{{ path('account_address_add') }}">cliquer ici</a>.
         </p>
         {% else %}
         <div class="row text-center">
             {% for order in app.user.orders|slice(0,8) %}
             <div>
-                {{order.reference ~ ' ' ~ order.billingAddress ~ ' ' ~ order.amount|number_format(2, ',', ' ') }} €
+                {{order.reference ~ ' ' ~ order.billingAddress}}
 
             </div>
             {% endfor %}
         </div>
         {% endif %}
         <div class="account-item text-center">
-            <a href="{#{{ path('account_order') }}#}">Mes commandes</a>
+            <a href="{{ path('user_account_orders') }}">Mes commandes</a>
         </div>
     </div>
 
