--- a/templates/account/address.html.twig
+++ b/templates/account/address.html.twig
@@ -26,9 +26,9 @@
                     {{ address.additional }},<br />
                     {{ address.zip}} - {{ address.city }} - {{ address.country }}
                 </p>
-                <a href="{{ path('account_address_edit', { 'id' : address.id }) }}"><i
+                <a href="{{ path('user_account_address_update', { 'id' : address.id }) }}"><i
                         class="bi bi-pencil-square text-primary"></i></a> | <a
-                    href="{{ path('account_address_delete', { 'id' : address.id }) }}"><i
+                    href="{{ path('user_account_address_delete', { 'id' : address.id }) }}"><i
                         class="bi bi-trash3 text-danger"></i></a>
             </div>
         </div>
