--- a/templates/account/index.html.twig
+++ b/templates/account/index.html.twig
@@ -33,7 +33,7 @@
         {% if app.user.addresses|length == 0 %}
         <p class="text-center">
             Vous n'avez pas encore ajouté d'adresse dans votre compte client. Pour en ajouter une, veuillez <a
-                href="{{ path('account_address_add') }}">cliquer ici</a>.
+                href="{{ path('user_account_address_add') }}">cliquer ici</a>.
         </p>
         {% else %}
         <div class="row text-center">
@@ -59,7 +59,7 @@
         {% if app.user.orders|length == 0 %}
         <p class="text-center">
             Vous n'avez pas encore ajouté d'adresse dans votre compte client. Pour en ajouter une, veuillez <a
-                href="{{ path('account_address_add') }}">cliquer ici</a>.
+                href="{{ path('user_account_address_add') }}">cliquer ici</a>.
         </p>
         {% else %}
         <div class="row text-center">
