--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -111,6 +111,8 @@
 							<i class="bi bi-cart-plus-fill"></i>
 						</a>
 
+						<a href=""><i class="bi bi-suit-heart-fill"></i></a>
+
 					</div>
 				</div>
 			</div>
