--- a/templates/product/adminList.html.twig
+++ b/templates/product/adminList.html.twig
@@ -5,59 +5,52 @@
 
 {% block body %}
 
-	<h1 class="pb-5 text-center">Liste des produits</h1>
-
-	<div class="text-end mt-4">
-		<a href="{{ path('create_product') }}" class="btn btn-success">Ajouter un produit</a>
-	</div>
-
-
-	<table class="table table-hover table-sm texxt-center align-middle">
-		<thead>
-			<tr>
-				<th>N°</th>
-				<th>Nom</th>
-				<th>Quantité</th>
-				<th>Prix</th>
-				<th>Réference</th>
-				<th>reductions (%)</th>
-				<th>Prix Soldé</th>
-				<th>Catégorie</th>
-				<th>Marques</th>
-				<th>Sexe</th>
-				<th>Actions</th>
-			</tr>
-		</thead>
-		<tbody>
-			{% for product in products|reverse %}
-				<tr>
-					<td>{{ loop.revindex }}</td>
-					<td class="text-start"><img src="{{ asset('img/product/' ~ product.image1) }}" alt="image principale du produit {{ product.name }}" class="pe-3">{{ product.name }}</td>
-					<td>{{product.quantity}}</td>
-					<td>{{ product.price|number_format(2, ',', ' ') }}
-						€</td>
-					<td>{{ product.reference }}</td>
-					<td>{{ product.reduction }}</td>
-					<td>{{ product.priceSolde|number_format(2, ',', ' ') }}
-						€</td>
-					<td>{{ product.category.name }}</td>
-					<td>{{ product.brand.name }}</td>
-					<td>{{ product.sexe.name }}</td>
-					<td>
-						<a href="{{ path('update_product', {'id': product.id}) }}">
-							<i class="bi bi-pencil-square text-primary"></i>
-						</a>
-						<a href="{{ path('delete_product', {'id': product.id}) }}">
-							<i class="bi bi-trash3 text-danger"></i>
-						</a>
-
-
-					</td>
-				</tr>
-			{% endfor %}
-		</tbody>
-	</table>
-	<div class="text-end mt-4">
-		<a href="{{ path('create_product') }}" class="btn btn-success">Ajouter un produit</a>
-	</div>
+<h1 class="pb-5 text-center">Liste des produits</h1>
+<table class="table table-hover table-sm texxt-center align-middle">
+	<thead>
+		<tr>
+			<th>N°</th>
+			<th>Nom</th>
+			<th>Quantité</th>
+			<th>Prix</th>
+			<th>Réference</th>
+			<th>reductions (%)</th>
+			<th>Prix Soldé</th>
+			<th>Catégorie</th>
+			<th>Marques</th>
+			<th>Sexe</th>
+			<th>Actions</th>
+		</tr>
+	</thead>
+	<tbody>
+		{% for product in products|reverse %}
+		<tr>
+			<td>{{ loop.revindex }}</td>
+			<td class="text-start"><img src="{{ asset('img/product/' ~ product.image1) }}"
+					alt="image principale du produit {{ product.name }}" class="pe-3">{{ product.name }}</td>
+			<td>{{product.quantity}}</td>
+			<td>{{ product.price|number_format(2, ',', ' ') }}
+				€</td>
+			<td>{{ product.reference }}</td>
+			<td>{{ product.reduction }}</td>
+			<td>{{ product.priceSolde|number_format(2, ',', ' ') }}
+				€</td>
+			<td>{{ product.category.name }}</td>
+			<td>{{ product.brand.name }}</td>
+			<td>{{ product.sexe.name }}</td>
+			<td>
+				<a href="{{ path('update_product', {'id': product.id}) }}">
+					<i class="bi bi-pencil-square text-primary"></i>
+				</a>
+				<a href="{{ path('delete_product', {'id': product.id}) }}">
+					<i class="bi bi-trash3 text-danger"></i>
+				</a>
+			</td>
+		</tr>
+		{% endfor %}
+	</tbody>
+</table>
+<div class="text-end mt-4">
+	<a href="{{ path('create_product') }}" class="btn btn-success">Ajouter un produit</a>
+</div>
 {% endblock %}
