--- a/templates/product/sexe.html.twig
+++ b/templates/product/sexe.html.twig
@@ -51,12 +51,16 @@
 				</div>
 				<div class="card-footer p-4 pt-0 border-top-0 bg-transparent">
 					<div class="text-center">
+
 						<a href="{{ path('product_show', {'slug': product.slug}) }}"
 							class="card-link btn btn-outline-primary">Acheter</a>
+
 						<a href="{{path('cart_add', {'id':product.id})}}"
 							class="card-link btn btn-{{ product.quantity != 0 ? 'success' : 'danger disabled' }}">
 							<i class="bi bi-cart-plus-fill"></i>
 						</a>
+
+						<a href="{{path('favoris_add', {'id':product.id})}}"><i class="bi bi-suit-heart-fill"></i></a>
 
 					</div>
 				</div>
