--- a/templates/registration/confirmation_email.html.twig
+++ b/templates/registration/confirmation_email.html.twig
@@ -1,21 +1,19 @@
-<h1>Hi! Please confirm your email!</h1>
-<h1>Bonjour ! Merci de confirmer votre adresse email !</h1>
+<h2>Bonjour ! Merci de confirmer votre adresse email !</h2>
 
 
 <p>
-	Please confirm your email address by clicking the following link:
+
 	Merci de confirmer votre adresse email cliquant sur ce lien:
 
 	<br><br>
 	<a href="{{ signedUrl }}">Confirm my Email</a>.
 	<a href="{{ signedUrl }}">Confirmer mon email</a>.
 
-	This link will expire in
-	ce lien experera dans
+	Ce lien experera dans
 
 	{{ expiresAtMessageKey|trans(expiresAtMessageData, 'VerifyEmailBundle') }}.
 </p>
 
 <p>
-	Cheers!
+	Merci!
 </p>
