--- a/templates/account/address_form.html.twig
+++ b/templates/account/address_form.html.twig
@@ -1,31 +1,40 @@
 {% extends "base.html.twig" %}
 
-{% block title %}
 
+{% block title %}{{ app.request.attributes.get('_route') == 'user_account_address_add' ? 'création' : 'modification' }}
+une adresse
 {% endblock %}
 
+{% block h1 %}{{ app.request.attributes.get('_route') == 'user_account_address_add' ? 'Créer' : 'Modifier' }}
+une adresse
+{% endblock %}
+
+
 {% block body %}
-<div class="text-center py-5">
-	<h1>Ajouter une adresses</h1>
-</div>
+
 
 {{ form_start(addressform) }}
 <div class="row">
 
-	<div class="col-md-6">{{ form_row(addressform.address,{
+	<div class="col-md-6 offset-md-3 col-lg-4 offset-lg-4">
+		{{ form_row(addressform.address,{
 		'label': 'Adresse',
 		}
 		) }}</div>
-	<div class="col-md-6">{{ form_row(addressform.additional ,{
+	<div class="col-md-6 offset-md-3 col-lg-4 offset-lg-4">
+		{{ form_row(addressform.additional ,{
 		'label': 'Adresse complémentaire',
 		}) }}</div>
-	<div class="col-md-6">{{ form_row(addressform.zip ,{
+	<div class="col-md-6 offset-md-3 col-lg-4 offset-lg-4">
+		{{ form_row(addressform.zip ,{
 		'label': 'Code postale',
 		}) }}</div>
-	<div class="col-md-6">{{ form_row(addressform.city ,{
+	<div class="col-md-6 offset-md-3 col-lg-4 offset-lg-4">
+		{{ form_row(addressform.city ,{
 		'label': 'Ville',
 		}) }}</div>
-	<div class="col-md-6">{{ form_row(addressform.country, {
+	<div class="col-md-6 offset-md-3 col-lg-4 offset-lg-4">
+		{{ form_row(addressform.country, {
 		'label': 'Pays',
 		'attr': {
 		'placeholder': '--Selectioné--'
@@ -34,11 +43,16 @@
 
 </div>
 
-<div>
-	<button type="submit">Créer</button>
+<div class="row">
+	<div class="col-md-6 offset-md-3 col-lg-4 offset-lg-4">
+		<button class="btn btn-success">{{ app.request.attributes.get('_route') == 'user_account_address_add' ? 'Créer'
+			:
+			'Modifier'
+			}}
+		</button>
 
-	<a href="{{ path('user_account_address' , {'id': app.user.id}) }}">Annuler</a>
-
+		<a class="btn btn-dark" href="{{ path('user_account_address' , {'id': app.user.id}) }}">Annuler</a>
+	</div>
 </div>
 {{ form_end(addressform) }}
 {% endblock %}
