--- a/templates/cart/validation.html.twig
+++ b/templates/cart/validation.html.twig
@@ -6,13 +6,13 @@
 {% block title %}validation panier
 {% endblock %}
 
-{% block h1 %}validation
+
+{% block h1 %}Validation
 
 {% endblock %}
-
 {% block body %}
 
-<div class="col-6 my-5">
+<div class="col-6 offset-3 my-5">
 	<h2>Votre panier</h2>
 	<table class="table">
 		<thead>
@@ -50,7 +50,7 @@
 	</table>
 </div>
 
-<div class="col-6 p-4 ">
+<div class="col-6 offset-3 p-4 ">
 	<h2>
 		Livraison
 
