--- a/templates/product/form.html.twig
+++ b/templates/product/form.html.twig
@@ -63,22 +63,12 @@ produit
 <div class="row">
 	<div class="col-6">
 		{{ form_row(productForm.abstract, {
-		'label': 'Résumé',
-		'attr': {
-		'placeholder': 'Ex.: Lorem ipsum dolor sit amet consectetur adipisicing elit. Expedita provident et quod. Vero
-		aliquid praesentium earum eos, facilis doloremque tempora ab quidem incidunt ! Ea, dignissimos. Quas sed modi
-		sapiente dolorem ?'
-		}
+		'label': 'Résumé'
 		}) }}
 	</div>
 	<div class="col-6">
 		{{ form_row(productForm.description, {
-		'label': 'Description',
-		'attr': {
-		'placeholder': 'Ex.: Lorem ipsum dolor sit amet consectetur adipisicing elit. Expedita provident et quod. Vero
-		aliquid praesentium earum eos, facilis doloremque tempora ab quidem incidunt ! Ea, dignissimos. Quas sed modi
-		sapiente dolorem ?'
-		}
+		'label': 'Description'
 		}) }}
 	</div>
 	<div class="col">
