--- a/templates/category/form.html.twig
+++ b/templates/category/form.html.twig
@@ -13,7 +13,7 @@ category{% endblock %}
 {{ form_start(categoryForm) }}
 
 <div class="row">
-    <div class="col-6">
+    <div class="col-3">
 
         {{ form_label(categoryForm.name, 'Nom') }}
         {{ form_errors(categoryForm.name) }}
@@ -24,34 +24,20 @@ category{% endblock %}
         }) }}
         {{ form_help(categoryForm.name) }}
     </div>
-    <div class="col-3">
-        {{ form_row(categoryForm.description, {
-        'label': 'Description',
-        'attr': {
-        'placeholder': 'Ex.: Description'
-        }
-        }) }}
-    </div>
-    {# <div class="col-3">
-        {{ form_row(categoryForm.img, {
-        'label': 'Description',
-        'attr': {
-        'placeholder': 'Ex.: Image'
-        }
-        }) }}#}
 
-    </div>
+
+
 
     <div class="row">
-        <div class="col-12 text-end my-3">
+        <div class="my-3 text-center">
             <a href="{{ path('admin_category')}}" class="btn btn-outline-danger me-3">Annuler</a>
             <button class="btn btn-success">{{ app.request.attributes.get('_route') == 'create_category' ? 'Créer' :
                 'Modifier' }} </button>
         </div>
     </div>
 
+</div>
 
+{{ form_end(categoryForm) }}
 
-    {{ form_end(categoryForm) }}
-
-    {% endblock %}
+{% endblock %}
