--- a/templates/contact/index.html.twig
+++ b/templates/contact/index.html.twig
@@ -3,93 +3,95 @@
 {% block title %}contact
 {% endblock %}
 
+{% block h1 %}
+Nous contacter
+{% endblock %}
+
 {% block body %}
 
-	<h1 class="text-center">Nous contacter</h1>
+{{form_start(contactForm)}}
 
-	{{form_start(contactForm)}}
-
-	<div class="row">
-		<div class="col-md-5 offset-md-1 col-lg-4 offset-lg-2">
-			{% if app.user %}
-				{{ form_row(contactForm.first_name, {
-                        'label': 'Prénom',
-                        'value': app.user.firstName
-                    }) }}
-			{% else %}
-				{{ form_row(contactForm.first_name, {
-                        'label': 'Prénom'
-                    }) }}
-			{% endif %}
-		</div>
-		<div class="col-md-5 col-lg-4">
-			{% if app.user %}
-				{{ form_row(contactForm.last_name, {
-                        'label': 'Nom',
-                        'value': app.user.lastName
-                    }) }}
-			{% else %}
-				{{ form_row(contactForm.last_name, {
-                        'label': 'Nom'
-                    }) }}
-			{% endif %}
-		</div>
+<div class="row">
+	<div class="col-md-5 offset-md-1 col-lg-4 offset-lg-2">
+		{% if app.user %}
+		{{ form_row(contactForm.first_name, {
+		'label': 'Prénom',
+		'value': app.user.firstName
+		}) }}
+		{% else %}
+		{{ form_row(contactForm.first_name, {
+		'label': 'Prénom'
+		}) }}
+		{% endif %}
 	</div>
-
-	<div class="row">
-		<div class="col-md-5 offset-md-1 col-lg-4 offset-lg-2">
-			{{ form_row(contactForm.company, {
-                    'label': 'Entreprise'
-                }) }}
-		</div>
-		<div class="col-md-5 col-lg-4">
-			{% if app.user %}
-				{{ form_row(contactForm.email, {
-                        'value': app.user.email
-                    }) }}
-			{% else %}
-				{{ form_row(contactForm.email) }}
-			{% endif %}
-		</div>
+	<div class="col-md-5 col-lg-4">
+		{% if app.user %}
+		{{ form_row(contactForm.last_name, {
+		'label': 'Nom',
+		'value': app.user.lastName
+		}) }}
+		{% else %}
+		{{ form_row(contactForm.last_name, {
+		'label': 'Nom'
+		}) }}
+		{% endif %}
 	</div>
+</div>
 
-	<div class="row">
-		<div class="col-md-5 offset-md-1 col-lg-4 offset-lg-2">
-			{{ form_row(contactForm.subject, {
-                    'label': 'Objet'
-                }) }}
-		</div>
-		<div class="col-md-5 col-lg-4">
-			{{ form_row(contactForm.attachment, {
-                    'label': 'Document'
-                }) }}
-		</div>
+<div class="row">
+	<div class="col-md-5 offset-md-1 col-lg-4 offset-lg-2">
+		{{ form_row(contactForm.company, {
+		'label': 'Entreprise'
+		}) }}
 	</div>
-
-	<div class="row">
-		<div class="col-md-10 offset-md-1 col-lg-8 offset-lg-2">
-			{{ form_row(contactForm.message) }}
-		</div>
+	<div class="col-md-5 col-lg-4">
+		{% if app.user %}
+		{{ form_row(contactForm.email, {
+		'value': app.user.email
+		}) }}
+		{% else %}
+		{{ form_row(contactForm.email) }}
+		{% endif %}
 	</div>
+</div>
 
-	<div class="row text-end my-5">
-		<div class="col-md-10 offset-md-1 col-lg-8 offset-lg-2">
-			<button type="submit" class="btn btn-success">Envoyer</button>
-		</div>
+<div class="row">
+	<div class="col-md-5 offset-md-1 col-lg-4 offset-lg-2">
+		{{ form_row(contactForm.subject, {
+		'label': 'Objet'
+		}) }}
 	</div>
-
-	{{form_end(contactForm)}}
-
-
-	<div class="my-5">
-		<ul class='text-center p-0'>
-			<li>{{ contact_company }}</li>
-			<li>{{ contact_address }}</li>
-			<li>{{ contact_zip }}</li>
-			<li>{{ contact_phone }}</li>
-			<li>{{ contact_email}}</li>
-		</ul>
+	<div class="col-md-5 col-lg-4">
+		{{ form_row(contactForm.attachment, {
+		'label': 'Document'
+		}) }}
 	</div>
+</div>
+
+<div class="row">
+	<div class="col-md-10 offset-md-1 col-lg-8 offset-lg-2">
+		{{ form_row(contactForm.message) }}
+	</div>
+</div>
+
+<div class="row text-end my-5">
+	<div class="col-md-10 offset-md-1 col-lg-8 offset-lg-2">
+		<button type="submit" class="btn btn-success">Envoyer</button>
+	</div>
+</div>
+
+{{form_end(contactForm)}}
+
+
+<div class="my-5">
+	<ul class='text-center p-0'>
+		<li>{{ contact_company }}</li>
+		<li>{{ contact_address }}</li>
+		<li>{{ contact_zip }}</li>
+		<li>{{ contact_phone }}</li>
+		<li>{{ contact_email}}</li>
+	</ul>
+</div>
 
 
 {% endblock %}
