--- a/templates/password/create_password.html.twig
+++ b/templates/password/create_password.html.twig
@@ -1,39 +1,39 @@
 {% extends 'base.html.twig' %}
 
 {% block title %}Réinitialisation de mot de passe{% endblock %}
+{% block h1 %}Réinitialisation de mot de passe{% endblock %}
 
 {% block body %}
-<div class="title">
-    <h1>Réinitialisation de mot de passe</h1>
-</div>
-
-<div class="container my-4">
-
-    <div class="row">
-
-        {{ form_start(createPasswordForm) }}
-
-        {{ form_row(createPasswordForm.plainPassword.first) }}
-
-        {{ form_row(createPasswordForm.plainPassword.second) }}
 
 
+{{ form_start(createPasswordForm) }}
 
-
-
-
-        <div class="row">
-            <div class="col-12 text-end my-3">
-                <a href="{{ path('login')}}" class="btn btn-outline-danger me-3">Annuler</a>
-                <button class="btn btn-success"> Envoyer </button>
-            </div>
-        </div>
-
-        {{ form_end(createPasswordForm) }}
-
+<div class="row">
+    <div class="col-md-6 offset-md-3 col-lg-4 offset-lg-4">
+        {{ form_row(createPasswordForm.plainPassword.first, {
+        label: 'Mot de passe'
+        }) }}
 
     </div>
-
 </div>
+<div class="row">
+    <div class="col-md-6 offset-md-3 col-lg-4 offset-lg-4">
+        {{ form_row(createPasswordForm.plainPassword.second, {
+        label: 'Répétez mot de passe'
+        }) }}
+
+    </div>
+</div>
+<div class="row">
+    <div class="col-md-6 offset-md-3 col-lg-4 offset-lg-4">
+        <a href="{{ path('login')}}" class="btn btn-outline-danger">Annuler</a>
+        <button class="btn btn-success"> Envoyer </button>
+    </div>
+</div>
+
+{{ form_end(createPasswordForm) }}
+
+
+
 
 {% endblock %}
