--- a/templates/password/reset_password_request.html.twig
+++ b/templates/password/reset_password_request.html.twig
@@ -2,38 +2,43 @@
 
 {% block title %}Réinitialisation de mot de passe{% endblock %}
 
+{% block h1 %}Réinitialisation de mot de passe{% endblock %}
+
 {% block body %}
-<div class="title">
-    <h1>Réinitialisation de mot de passe</h1>
-</div>
-
-<div class="container my-4">
-
-    <div class="row">
-
-        {{ form_start(requestPasswordForm) }}
-
-        {{ form_row(requestPasswordForm.email.first) }}
-        {{ form_row(requestPasswordForm.email.second) }}
 
 
 
-
-
-
-
-        <div class="row">
-            <div class="col-12 text-end my-3">
-                <a href="{{ path('login')}}" class="btn btn-outline-danger me-3">Annuler</a>
-                <button class="btn btn-success"> Envoyer </button>
-            </div>
-        </div>
-
-        {{ form_end(requestPasswordForm) }}
-
+{{ form_start(requestPasswordForm) }}
+<div class="row">
+    <div class="col-md-6 offset-md-3 col-lg-4 offset-lg-4">
+        {{ form_row(requestPasswordForm.email.first, {
+        label: 'Email'
+        }) }}
 
     </div>
+</div>
+<div class="row">
+    <div class="col-md-6 offset-md-3 col-lg-4 offset-lg-4">
+        {{ form_row(requestPasswordForm.email.second, {
+        label: 'Confirmer votre email'
+        }) }}
+
+    </div>
+</div>
+
+
+<div class="row">
+    <div class="col-md-6 offset-md-3 col-lg-4 offset-lg-4 text-end my-3">
+        <a href="{{ path('login')}}" class="btn btn-outline-danger me-3">Annuler</a>
+        <button class="btn btn-success"> Envoyer </button>
+    </div>
+</div>
+
+{{ form_end(requestPasswordForm) }}
+
 
 </div>
+
+
 
 {% endblock %}
