--- a/templates/payment/cancel.html.twig
+++ b/templates/payment/cancel.html.twig
@@ -8,11 +8,12 @@
 
 {% block h1 %}Paiement refusé
 {% endblock %}
-
+{% block body %}
 <div class="col-6 offset-3">
 	<p>Le paiement a été refusé. Merci de réessayer ultérieurement.</p>
 	<p>Si le problème persiste, merci de contacter un administrateur du site via le
-		<a href="{{ path('contact') }}">formulaire de contact</a>.</p>
+		<a href="{{ path('contact') }}">formulaire de contact</a>.
+	</p>
 </div>
 
-{% block body %}
+{% endblock %}
