--- a/templates/product/productShow.html.twig
+++ b/templates/product/productShow.html.twig
@@ -1,50 +1,57 @@
 {% extends 'base.html.twig' %}
+{% block title %}
+Details du produi
+{% endblock %}
+
+{% block h1 %}
+Details du produit
+{% endblock %}
 
 {% block body %}
 
-<section class="py-5">
-	<div class="container px-4 px-lg-5 my-5">
-		<div class="row gx-4 gx-lg-5 align-items-center">
-			<div class="col-md-6"><img class="card-img-top mb-5 mb-md-0"
-					src="{{ asset('img/product/' ~ product.image1) }}" alt="..." /></div>
-			<div class="col-md-6">
-				<div class="small mb-1">{{product.reference}}</div>
-				<h1 class="display-5 fw-bolder">
-					{{product.name}}</h1>
-				<div class="fs-5 mb-5">
-					{% if product.reduction == 0 %}
 
-					<span class="">{{product.price|number_format(2, ',', ' ') }}
-						€</span>
+<div class="container px-4 px-lg-5 my-5">
+	<div class="row gx-4 gx-lg-5 align-items-center">
+		<div class="col-md-6"><img class="card-img-top mb-5 mb-md-0" src="{{ asset('img/product/' ~ product.image1) }}"
+				alt="..." /></div>
+		<div class="col-md-6">
+			<div class="small mb-1">{{product.reference}}</div>
+			<h1 class="display-5 fw-bolder">
+				{{product.name}}</h1>
+			<div class="fs-5 mb-5">
+				{% if product.reduction == 0 %}
 
-					{% else %}
+				<span class="">{{product.price|number_format(2, ',', ' ') }}
+					€</span>
 
-					<span class="text-decoration-line-through text-danger">{{product.price|number_format(2, ',', '
-						')}}
-						€</span>
-					<span>{{product.PriceSolde|number_format(2, ',', ' ') }}
-						€</span>
+				{% else %}
 
-					{% endif %}
+				<span class="text-decoration-line-through text-danger">{{product.price|number_format(2, ',', '
+					')}}
+					€</span>
+				<span>{{product.PriceSolde|number_format(2, ',', ' ') }}
+					€</span>
+
+				{% endif %}
 
 
-				</div>
-				<p class="lead">{{product.abstract}}</p>
-				<div class="d-flex">
-					<input class="form-control text-center me-3" id="inputQuantity" type="num"
-						value="{{product.quantity}}" style="max-width: 3rem" />
-					<button class="btn btn-success flex-shrink-0" type="button">
-						<a href="{{path('cart_add', {'id':product.id})}}"
-							class="card-link btn btn-{{ product.quantity != 0 ? 'success' : 'danger disabled' }}">
-							<i class="bi bi-cart-plus-fill"></i> Acheter
-						</a>
-					</button>
-				</div>
+			</div>
+			<p>{{product.abstract}}</p>
+			<div class="d-flex">
+				<input class="form-control text-center me-3" id="inputQuantity" type="num" value="{{product.quantity}}"
+					style="max-width: 3rem" />
+				<button class="btn btn-success flex-shrink-0" type="button">
+					<a href="{{path('cart_add', {'id':product.id})}}"
+						class="card-link btn btn-{{ product.quantity != 0 ? 'success' : 'danger disabled' }}">
+						<i class="bi bi-cart-plus-fill"></i> Acheter
+					</a>
+				</button>
 			</div>
 		</div>
-</section>
+	</div>
 
-<section class="py-5 bg-light">
+
+
 	<div class="container px-4 px-lg-5 mt-5">
 		<h2 class="fw-bolder mb-4">Autres produits</h2>
 	</div>
@@ -85,10 +92,6 @@
 		{% endfor %}
 
 
-</section>
 
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
 
-<script src="js/scripts.js"></script>
-
-{% endblock %}
+		{% endblock %}
