--- a/templates/product/sexe.html.twig
+++ b/templates/product/sexe.html.twig
@@ -1,5 +1,13 @@
 {% extends 'base.html.twig' %}
 
+{% block title %}
+
+{% endblock %}
+{% block h1 %}
+
+
+{% endblock %}
+
 {% block body %}
 
 <div class="col-12 my-5 pt-1">
@@ -60,7 +68,8 @@
 							<i class="bi bi-cart-plus-fill"></i>
 						</a>
 
-						<a href="{{path('favoris_add', {'id':product.id})}}"><i class="bi bi-suit-heart-fill"></i></a>
+						<a href="{{ path('favorite_add', {'id': product.id }) }}" class="card-link btn btn-danger"> <i
+								class="bi bi-heart-fill"></i></a>
 
 					</div>
 				</div>
