--- a/public/css/page.css
+++ b/public/css/page.css
@@ -17,5 +17,5 @@ main .btn {
 
             .btn:hover {
                 
-                color: blue;
+                color: black;
             }
