--- a/templates/account/address_form.html.twig
+++ b/templates/account/address_form.html.twig
@@ -43,7 +43,7 @@ une adresse
 
 </div>
 
-<div class="row">
+<div class="row mb-4">
 	<div class="col-md-6 offset-md-3 col-lg-4 offset-lg-4">
 		<button class="btn btn-success">{{ app.request.attributes.get('_route') == 'user_account_address_add' ? 'Créer'
 			:
