--- a/templates/account/orders.html.twig
+++ b/templates/account/orders.html.twig
@@ -52,7 +52,7 @@
         {% endfor %}
     </tbody>
 </table>
-<div>
+<div class="mb-4">
     <a class="btn btn-dark" href="{{ path('user_account', {'id':app.user.id}) }}">Retour</a>
 </div>
 
