--- a/templates/password/account_password.html.twig
+++ b/templates/password/account_password.html.twig
@@ -24,7 +24,7 @@
 
     </div>
 </div>
-<div class="row">
+<div class="row mb-4">
     <div class="col-md-6 offset-md-3 col-lg-4 offset-lg-4">
         <a href="{{ path('user_account')}}" class="btn btn-outline-danger ">Annuler</a>
         <button class="btn btn-success"> Envoyer </button>
