--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -59,7 +59,7 @@
 
 
 						<span>
-							{{product.PriceSolde|number_format(2, ',', ' ')}}
+							{{product.priceSolde|number_format(2, ',', ' ')}}
 							€
 						</span>
 
