--- a/templates/payment/index.html.twig
+++ b/templates/payment/index.html.twig
@@ -15,8 +15,14 @@
 
 <script src="https://js.stripe.com/v3/"></script>
 
+{#
 <script>
 	var stripe = Stripe('pk_live_51Le0XpE3RfWxSpj123aMWr5ovLplYGTrm9tj6PmBStfu7t2rQyEvNpNBwtNDxRNFpFmloXW1cXYAS0yiHWYKcTu800s9zBBs3J'); // initialise Stripe
+	stripe.redirectToCheckout({ sessionId: '{{ sessionId }}' })
+</script> #}
+
+<script>
+	var stripe = Stripe('pk_test_51Le0dIKhOJnU8RJKTxlD1GSQbBISYxcCnW8ErpW8x7YgDUO6pNoa59STGjXtyIe6z9XiEbmhhFSLrlFE30W7yxnK005y1q1ots'); // initialise Stripe
 	stripe.redirectToCheckout({ sessionId: '{{ sessionId }}' })
 </script>
 
