--- a/templates/product/productShow.html.twig
+++ b/templates/product/productShow.html.twig
@@ -29,7 +29,7 @@ Details du produit
 				<span class="text-decoration-line-through text-danger">{{product.price|number_format(2, ',', '
 					')}}
 					€</span>
-				<span>{{product.PriceSolde|number_format(2, ',', ' ') }}
+				<span>{{product.priceSolde|number_format(2, ',', ' ') }}
 					€</span>
 
 				{% endif %}
