--- a/templates/cart/index.html.twig
+++ b/templates/cart/index.html.twig
@@ -11,63 +11,82 @@
 
 {% block body %}
 
-	<div class="row">
-		<div class="col-12">
-			<table class="table table-hover align-middle">
-				<thead class="table-dark text-center align-middle">
-					<tr>
-						<th>DÉSIGNATION</th>
-						<th>PRIX UNITAIRE</th>
-						<th>QUANTITÉ</th>
-						<th>SOUS-TOTAL</th>
-					</tr>
-				</thead>
-				<tbody>
-					{% for element in cart %}
-						<tr>
-							<td>
-								<img src="{{ asset('img/product/' ~ element.product.image1) }}" alt="image principale {{ element.product.name }}">
-								{{ element.product.name }}
-								<a href="{{ path('cart_delete', {'id': element.product.id}) }}" class="text-danger">
-									<i class="bi bi-x-circle"></i>
-								</a>
-							</td>
-							<td class="text-end">{{ element.product.price|number_format(2, ',', ' ') }}
-								€</td>
-							<td class="text-center">
-								<a href="{{ path('cart_remove', {'id': element.product.id}) }}">
-									<i class="bi bi-dash-square text-danger"></i>
-								</a>
-								<span class="mx-2">{{ element.quantity }}</span>
-								<a href="{{ path('cart_add', {'id': element.product.id}) }}">
-									<i class="bi bi-plus-square text-success"></i>
-								</a>
-							</td>
-							<td class="text-end">{{ (element.product.price * element.quantity)|number_format(2, ',', ' ') }}
-								€</td>
-						</tr>
+<div class="row">
+	<div class="col-12">
+		<table class="table table-hover align-middle">
+			<thead class="table-dark text-center align-middle">
+				<tr>
+					<th>DÉSIGNATION</th>
+					<th>PRIX UNITAIRE</th>
+					<th>QUANTITÉ</th>
+					<th>SOUS-TOTAL</th>
+				</tr>
+			</thead>
+			<tbody>
+				{% for element in cart %}
+				<tr>
+					<td>
+						<img src="{{ asset('img/product/' ~ element.product.image1) }}"
+							alt="image principale {{ element.product.name }}">
+						{{ element.product.name }}
+						<a href="{{ path('cart_delete', {'id': element.product.id}) }}" class="text-danger">
+							<i class="bi bi-x-circle"></i>
+						</a>
+					</td>
+					{% if element.product.reduction > 0 %}
+					<td class="text-center">{{ element.product.priceSolde|number_format(2, ',', ' ') }}
+						€
+					</td>
 					{% else %}
-						<tr>
-							<td colspan="4" class="text-center">Votre panier est vide</td>
-						</tr>
-					{% endfor %}
-				</tbody>
-				<tfoot class="table-dark">
-					<tr>
-						<th colspan="3" class="text-end">TOTAL :</th>
-						<th class="text-end">{{ total|number_format(2, ',', ' ') }}
-							€</th>
-					</tr>
-				</tfoot>
-			</table>
-		</div>
-	</div>
 
-	<div class="row my-5">
-		<div class="col-12 text-end">
-			<a href="{{ path('cart_clear') }}" class="btn btn-danger me-3">Vider le panier</a>
-			<a href="{{ path('cart_validation') }}" class="btn btn-success">Valider le panier</a>
-		</div>
+					<td class="text-center">{{ element.product.price|number_format(2, ',', ' ') }}
+						€
+					</td>
+					{% endif %}
+
+					<td class="text-center">
+						<a href="{{ path('cart_remove', {'id': element.product.id}) }}">
+							<i class="bi bi-dash-square text-danger"></i>
+						</a>
+						<span class="mx-2">{{ element.quantity }}</span>
+						<a href="{{ path('cart_add', {'id': element.product.id}) }}">
+							<i class="bi bi-plus-square text-success"></i>
+						</a>
+					</td>
+					{% if element.product.reduction > 0 %}
+					<td class="text-end">{{ (element.product.priceSolde * element.quantity)|number_format(2, ',', ' ')
+						}}
+						€</td>
+
+					{% else %}
+
+					<td class="text-end">{{ (element.product.price * element.quantity)|number_format(2, ',', ' ') }}
+						€</td>
+					{% endif %}
+
+				</tr>
+				{% else %}
+				<tr>
+					<td colspan="4" class="text-center">Votre panier est vide</td>
+				</tr>
+				{% endfor %}
+			</tbody>
+			<tfoot class="table-dark">
+				<tr>
+					<th colspan="3" class="text-end">TOTAL :</th>
+					<th class="text-end">{{ total|number_format(2, ',', ' ') }}
+						€</th>
+				</tr>
+			</tfoot>
+		</table>
 	</div>
+</div>
+
+<div class="row my-5">
+	<div class="col-12 text-end">
+		<a href="{{ path('cart_clear') }}" class="btn btn-danger me-3">Vider le panier</a>
+		<a href="{{ path('cart_validation') }}" class="btn btn-success">Valider le panier</a>
+	</div>
+</div>
 
 {% endblock %}
