--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -4,7 +4,7 @@
 {% endblock %}
 
 
-{% block description %}VDM - votre nouvelle boutique de ventes de ventements en ligne
+{% block description %}VDV - votre nouvelle boutique de ventes de ventements en ligne
 {% endblock %}
 
 {% block body %}
