--- a/templates/bundles/TwigBundle/Exception/error.html.twig
+++ b/templates/bundles/TwigBundle/Exception/error.html.twig
@@ -8,11 +8,17 @@
 
 {% block body %}
 
-    <div class="row">
-        <div class="col-12 text-center">
-            <h2>Une erreur est survenue</h2>
-            <p><a href="{{ path('home') }}">Revenir à l'accueil</a></p>
-        </div>
+<div class="row">
+    <div class="col-12 text-center">
+        <h2>Une erreur est survenue</h2>
+        {% if is_granted('ROLE_ADMIN')%}
+        <p><a href="{{ path('admin') }}">Revenir à l'espace administrateur</a></p>
+        <p><a href="{{ path('home') }}">Revenir à l'accueil du site</a></p>
+        {% elseif %}
+        <p><a href="{{ path('home') }}">Revenir à l'accueil</a></p>
+        {% endif %}
+
     </div>
+</div>
 
 {% endblock %}
